@@ -5,7 +5,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: kahua-admin.in,v 1.3 2004/01/02 11:36:33 ko1 Exp $
+;; $Id: kahua-admin.in,v 1.4 2004/02/02 05:41:30 tahara Exp $
 
 (use srfi-1)
 (use gauche.net)
@@ -31,6 +31,11 @@
             (if (null? cmd)
               spvr-command-processor
               (case (car cmd)
+                ((help)
+                 (let ((spvr-help (send-command #f cmd))
+                       (admin-help '(connect cvs)))
+                   (write (append spvr-help admin-help)) (newline)
+                   (spvr-command-processor)))
                 ((connect)
                  (if (= (length cmd) 2)
                    (connect-worker (cadr cmd))
